# Finance-Intelligence-MCP

./: # Budget Table Schema.md  .gitignore  README.md  budget.py  categories.json  health.py  main.py  pyproject.toml  server.json
plans/: 001-delete-expenses-plan.md  002-update-expenses-plan.md  003-budget-table-plan.md  004-create-budget-plan.md  005-list-budgets-plan.md  006-update-budgets-plan.md  007-delete-budgets-plan.md  008-current-status-plan.md  009-expense-analytics-plan.md  010-financial-health-score-plan.md  011-token-onboarding-plan.md
scratch/: test_compare_budget_vs_expenses.py  test_current_status.py  test_delete_budgets.py  test_expense_analytics.py  test_expense_breakdown.py  test_financial_health.py  test_list_expenses_export.py  test_token_onboarding.py  test_update_budgets.py
specs/: 001-delete-expenses.md  002-update-expenses.md  003-budget-table.md  004-create-budget.md  005-list-budgets.md  006-update-budgets.md  007-delete-budgets.md  008-current-status.md  009-expense-analytics.md  010-financial-health-score.md
src/: analytics.py
