[project]
name = "finance-intelligence-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastmcp>=3.4.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.2",
]
