[project]
name = "finance-intelligence-mcp"
version = "0.1.0"
description = "A production-ready Model Context Protocol (MCP) server for private personal finance management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Ronit Rajput", email = "ronitrajput182005@gmail.com" }
]

keywords = [
    "mcp",
    "fastmcp",
    "finance",
    "postgresql",
    "ai",
    "llm"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "asyncpg>=0.31.0",
    "fastmcp>=3.4.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.2",
]
